welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:2: error: not found: value isWeeked
	if (40 <= cigars && cigars <= 60 && !isWeeked) {
                                             ^cigarParty:5: error: not found: value isWeeked
	if (40 <= cigars && isWeeked) {
                            ^