welcome.lessons.welcome.bat.bool2.CigarParty.scala.code
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = {
	if (40 <= cigars && cigars <= 60 && !isWeeked) {
		return true;
	}
	if (40 <= cigars && isWeeked) {
		return true;
	}
	return false;
}
